# numba-stub

./: numba.py  pyproject.toml
.github/workflows/: python-publish.yml
